--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,21 +18,14 @@ spring:
       load-on-startup: 1
     static-path-pattern: /static/**
 
-
-
 # JWT配置
 jwt:
   # 密匙KEY
   secret: JwtSecret
   # HeaderKEY
   tokenHeader: Authorization
-  # Token前缀字符
-  tokenPrefix: Xin-
   # 过期时间 单位秒 1天后过期=86400 7天后过期=604800
   expiration: 86400
-  # 配置不需要认证的接口
-  antMatchers: /index/**,/login/**,/favicon.ico,/register/**,/static/**,/home/**
-
 
 # Mybatis-plus相关配置
 mybatis-plus:
@@ -46,4 +39,4 @@ mybatis-plus:
   configuration:
     # 这个配置会将执行的sql打印出来，在开发或测试的时候可以用
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  type-aliases-package: com.xin.online_exam_sys.entity
+  type-aliases-package: com.xin.online_exam_sys.pojo
